fix(client): bg icon height on small screens

--- a/client/src/components/MainMenu/MainMenu.module.css
+++ b/client/src/components/MainMenu/MainMenu.module.css
@@ -17,7 +17,7 @@
   position: fixed;
   inset: 0;
   width: 100vw;
-  height: 100dvh;
+  height: 100vh;
   overflow: hidden;
   pointer-events: none;
   background: linear-gradient(
